# corepython

./: .gitignore  Cargo.toml  README.md  demo.py  mandel.py  mandel2.py  run_demo.js  run_it.py  run_mandel.js  run_mandel.py  run_mandel2.js  run_mandel2.py  test_page.html  x.py
.github/workflows/: ci.yaml
corepython/: Cargo.toml
corepython-cli/: Cargo.toml
corepython-cli/src/: main.rs
corepython-wasm/: Cargo.toml
corepython-wasm/src/: lib.rs
corepython-wasm/www/: index.html  index.js  package-lock.json  package.json
corepython/src/: analyze.rs  compile.rs  corepython.lalrpop  error.rs  lexer.rs  lib.rs  parser.rs  token.rs  wasm.rs
corepython/src/parser/: ast.rs  corepython.lalrpop  lexer.rs  location.rs  mod.rs  parser.rs  token.rs
src/: ast.rs  compile.rs  corepython.lalrpop  lexer.rs  main.rs  parser.rs  token.rs  wasm.rs
