[package]
name = "corepython-wasm"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

corepython = { path = "../corepython" }

console_error_panic_hook = { version = "0.1.6" }
console_log = "0.2.0"
log = "0.4.11"
wasm-bindgen = "0.2.63"
